--- a/css/styles.css
+++ b/css/styles.css
@@ -928,11 +928,15 @@ img {
 --------------------- 
 /* MEDIA */
 
+/* MOBILE */
+
 @media screen and (min-width: 480px) {
   .container {
     width: 428px;
   }
 }
+
+/* TABLET */
 
 @media screen and (min-width: 768px) {
   .container {
@@ -944,7 +948,6 @@ img {
     flex-wrap: wrap;
     row-gap: 72px;
     column-gap: 24px;
-    justify-content: center;
   }
 
   .advantages-list-item {
@@ -956,8 +959,38 @@ img {
   }
 }
 
+/* DESCTOP */
+
 @media screen and (min-width: 1200px) {
   .container {
     width: 1158px;
+  }
+
+  .advantages {
+    padding-top: 120px;
+    padding-bottom: 120px;
+  }
+
+  .advantages-list {
+    display: flex;
+    gap: 24px;
+  }
+  .container-advantages-list-item {
+    height: 112px;
+    background: #f4f4fd;
+    border-radius: 4px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .advantages-list-item {
+    max-width: 264px;
+  }
+
+  .advantages-list-item-title {
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 1.2;
   }
 }
