--- a/css/styles.css
+++ b/css/styles.css
@@ -286,32 +286,6 @@ img {
   color: var(--color-secondary);
 }
 
-/* section work */
-
-.work {
-  padding-bottom: 120px;
-}
-
-.work-title {
-  color: var(--color-primary);
-  font-weight: 700;
-  font-size: 36px;
-  line-height: 1.11;
-  text-transform: capitalize;
-  margin-bottom: 72px;
-  text-align: center;
-}
-
-.work-title-list {
-  display: flex;
-  justify-content: center;
-  gap: 24px;
-}
-
-.work-title-list-img {
-  width: calc((100% - 48px) / 3);
-}
-
 /* section our team */
 
 .team {
@@ -396,8 +370,8 @@ img {
 /* section customers */
 
 .customers {
-  padding-top: 130px;
-  padding-bottom: 120px;
+  padding-top: 96px;
+  padding-bottom: 96px;
   background-color: var(--color-third);
 }
 
@@ -414,12 +388,14 @@ img {
 
 .customers-list {
   display: flex;
+  flex-wrap: wrap;
   justify-content: center;
-  gap: 24px;
+  row-gap: 72px;
+  column-gap: 16px;
 }
 
 .customers-list-item {
-  width: calc((100% - 120px) / 6);
+  width: calc((100% - 16px * 3) / 2);
   height: 88px;
 }
 
@@ -945,7 +921,7 @@ img {
 @media screen and (max-width: 1200px) {
   .work {
     display: none;
-  } 
+  }
 }
 
 /* TABLET */
@@ -971,68 +947,97 @@ img {
   .advantages-list-item-title {
     text-align: start;
   }
-}
 
-/* DESCTOP */
+  /* section customers */
 
-@media screen and (min-width: 1200px) {
-  .container {
-    width: 1158px;
+  .customers-list {
+    column-gap: 24px;
   }
 
-  /* Section ADVANTAGES */
+  .customers-list-item {
+    width: calc((100% - 24px * 3) / 3);
+  }
 
-  .advantages {
-    padding-top: 120px;
+  /* DESCTOP */
+
+  @media screen and (min-width: 1200px) {
+    .container {
+      width: 1158px;
+    }
+
+    /* Section ADVANTAGES */
+
+    .advantages {
+      padding-top: 120px;
+      padding-bottom: 120px;
+    }
+
+    .advantages-list {
+      display: flex;
+      gap: 24px;
+    }
+    .container-advantages-list-item {
+      height: 112px;
+      background: #f4f4fd;
+      border-radius: 4px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+
+    .advantages-list-item {
+      max-width: 264px;
+    }
+
+    .advantages-list-item-title {
+      font-weight: 700;
+      font-size: 20px;
+      line-height: 1.2;
+    }
+  }
+
+  /* Section WORK */
+
+  .work {
     padding-bottom: 120px;
   }
 
-  .advantages-list {
-    display: flex;
-    gap: 24px;
+  .work-title {
+    color: var(--color-primary);
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.11;
+    text-transform: capitalize;
+    margin-bottom: 72px;
+    text-align: center;
   }
-  .container-advantages-list-item {
-    height: 112px;
-    background: #f4f4fd;
-    border-radius: 4px;
+
+  .work-title-list {
     display: flex;
     justify-content: center;
-    align-items: center;
+    gap: 24px;
   }
 
-  .advantages-list-item {
-    max-width: 264px;
+  .work-title-list-img {
+    width: calc((100% - 48px) / 3);
   }
 
-  .advantages-list-item-title {
-    font-weight: 700;
-    font-size: 20px;
-    line-height: 1.2;
+  /* section customers */
+
+  .customers {
+    padding-top: 130px;
+    padding-bottom: 120px;
+    background-color: var(--color-third);
   }
-}
 
-/* Section WORK */
+  .customers-list {
+    display: flex;
+    justify-content: center;
+    gap: 24px;
+  }
 
-.work {
-  padding-bottom: 120px;
-}
-
-.work-title {
-  color: var(--color-primary);
-  font-weight: 700;
-  font-size: 36px;
-  line-height: 1.11;
-  text-transform: capitalize;
-  margin-bottom: 72px;
-  text-align: center;
-}
-
-.work-title-list {
-  display: flex;
-  justify-content: center;
-  gap: 24px;
-}
-
-.work-title-list-img {
-  width: calc((100% - 48px) / 3);
+  .customers-list-item {
+    width: calc((100% - 120px) / 6);
+    height: 88px;
+  }
 }
