--- a/css/styles.css
+++ b/css/styles.css
@@ -307,7 +307,10 @@ img {
 
 .team-list {
   display: flex;
-  gap: 24px;
+  flex-wrap: wrap;
+  justify-content: center;
+  row-gap: 72px;
+  column-gap: 24px;
 }
 
 .team-list-card {
@@ -315,7 +318,6 @@ img {
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
   border-radius: 0px 0px 4px 4px;
   text-align: center;
-  width: calc((100% - 72px) / 4);
   background-color: var(--color-third);
 }
 
@@ -325,10 +327,9 @@ img {
 }
 
 .team-list-card-title {
-  font-weight: 700;
+  font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
-  letter-spacing: 0.02em;
   margin-bottom: 8px;
   color: var(--color-primary);
 }
@@ -914,7 +915,7 @@ img {
 
 @media screen and (min-width: 480px) {
   .container {
-    width: 428px;
+    max-width: 428px;
   }
 }
 
@@ -948,6 +949,12 @@ img {
     text-align: start;
   }
 
+  /* Section TEAM */
+
+  .team-list-card {
+    width: calc((100% - 72px) / 2);
+  }
+
   /* section customers */
 
   .customers-list {
@@ -977,7 +984,7 @@ img {
     display: flex;
     gap: 24px;
   }
-  
+
   .container-advantages-list-item {
     height: 112px;
     background: #f4f4fd;
@@ -1022,6 +1029,87 @@ img {
   .work-title-list-img {
     width: calc((100% - 48px) / 3);
   }
+
+  /* section our team */
+
+  /* .team {
+    background-color: var(--color-background-brand);
+    padding-top: 120px;
+    padding-bottom: 120px;
+  }
+
+  .team-title {
+    font-weight: 700;
+    font-size: 36px;
+    text-align: center;
+    line-height: 1.11;
+    letter-spacing: 0.02em;
+    text-transform: capitalize;
+    color: var(--color-primary);
+    margin-bottom: 72px;
+  }
+
+  .team-list {
+    display: flex;
+    gap: 24px;
+  }
+
+  .team-list-card {
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+      0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+    border-radius: 0px 0px 4px 4px;
+    text-align: center;
+    width: calc((100% - 72px) / 4);
+    background-color: var(--color-third);
+  }
+
+  .team-list-box {
+    display: block;
+    padding: 32px 0;
+  }
+
+  .team-list-card-title {
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+    margin-bottom: 8px;
+    color: var(--color-primary);
+  }
+
+  .team-list-card-text {
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    margin-bottom: 8px;
+  }
+
+  .team-social-list {
+    display: flex;
+    justify-content: center;
+    gap: 24px;
+  }
+
+  .social-list {
+    width: 40px;
+    height: 40px;
+  }
+
+  .social-link {
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    background-color: var(--color-action);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+
+  .social-link:hover,
+  .social-link:focus {
+    background-color: #404bbf;
+  } */
 
   /* section customers */
 
