--- a/test.css
+++ b/test.css
@@ -63,3 +63,13 @@ src="./images/img-2.jpg"
 alt="mobile-application-design"
 width="360"
 />
+
+--------------------------
+
+<symbol id="burger-icon" viewBox="0 0 32 32">
+<path d="M6.4 11.733v-2.133h19.2v2.133h-19.2zM6.4 17.067h19.2v-2.133h-19.2v2.133zM6.4 22.4h19.2v-2.133h-19.2v2.133z"></path>
+</symbol>
+Хрест закриття меню нижче:
+<symbol id="icon-close-mob-menu" viewBox="0 0 32 32">
+<path d="M23.733 10.304l-1.504-1.504-5.963 5.963-5.963-5.963-1.504 1.504 5.963 5.963-5.963 5.963 1.504 1.504 5.963-5.963 5.963 5.963 1.504-1.504-5.963-5.963 5.963-5.963z"></path>
+</symbol>
