--- a/css/styles.css
+++ b/css/styles.css
@@ -77,7 +77,7 @@ img {
 /* navigation */
 
 .container {
-  width: 428px;
+  width: 100%;
   /* width: 1158px; */
   padding-left: 15px;
   padding-right: 15px;
@@ -91,11 +91,12 @@ img {
 }
 
 .navigation-list {
+  display: none;
   font-weight: 700;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
-  display: flex;
+  /* display: flex; */
   gap: 40px;
 }
 
@@ -141,10 +142,11 @@ img {
 /* contacts */
 
 .navigation-contacts-list {
+  display: none;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
-  display: flex;
+  /* display: flex; */
   gap: 20px;
   align-items: center;
 }
@@ -976,6 +978,131 @@ img {
   .container {
     width: 1158px;
   }
+
+  /* Header */
+
+/* .header {
+  background-color: var(--color-third);
+  box-shadow: 0px 0px 0px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 0px 0px rgba(46, 47, 66, 0.08);
+}
+
+.container-navigation {
+  display: flex;
+} */
+
+/* logo */
+
+/* .link-logo {
+  font-family: "Raleway";
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 1.33;
+  color: var(--color-primary);
+  text-transform: uppercase;
+  text-decoration: none;
+  margin-right: 77px;
+  padding-top: 24px;
+  padding-bottom: 24px;
+  display: block;
+}
+
+.web-header-logo {
+  color: var(--color-action);
+} */
+
+/* navigation */
+
+/* .container {
+  width: 428px;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin: 0 auto;
+}
+
+.navigation {
+  display: flex;
+  align-items: center;
+  margin-right: auto;
+}
+
+.navigation-list {
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  display: flex;
+  gap: 40px;
+}
+
+.link-navigation {
+  color: var(--color-primary);
+  text-decoration: none;
+  padding-top: 24px;
+  padding-bottom: 24px;
+  display: flex;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  position: relative;
+}
+
+.link-navigation:hover,
+.link-navigation:focus {
+  color: var(--color-action);
+}
+
+.link-navigation-line-studio::after {
+  content: "";
+  width: 100%;
+  height: 4px;
+  background: var(--color-button-action);
+  border-radius: 2px;
+  position: absolute;
+  bottom: 0;
+}
+
+.link-navigation-line-portfolio::after {
+  content: "";
+  width: 100%;
+  height: 4px;
+  background: var(--color-button-action);
+  border-radius: 2px;
+  position: absolute;
+  bottom: 0;
+}
+
+.link.current {
+  color: var(--color-action);
+} */
+
+/* contacts */
+
+/* .navigation-contacts-list {
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  display: flex;
+  gap: 20px;
+  align-items: center;
+}
+
+.link-contacts {
+  display: flex;
+  align-items: center;
+  color: var(--color-secondary);
+  text-decoration: none;
+  fill: var(--color-secondary);
+  gap: 10px;
+  padding-top: 24px;
+  padding-bottom: 24px;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.link-contacts:hover,
+.link-contacts:focus .link-contacts {
+  fill: var(--color-action);
+  color: var(--color-action);
+} */
 
   /* Section ADVANTAGES */
 
