--- a/css/styles.css
+++ b/css/styles.css
@@ -88,12 +88,22 @@ img {
   position: fixed;
   width: 100%;
   height: 100%;
+  max-height: 796px;
   z-index: 1000;
   top: 0;
   left: 0;
   background: var(--color-third);
-  box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
-    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
+  box-shadow: 0 0 0 100vmax rgba(0, 0, 0, 0.5);
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+  transition: opacity 250ms linear, visibility 250ms linear;
+}
+
+.mobile-menu.is-hidden {
+  opacity: 1;
+  visibility: visible;
+  pointer-events: auto;
 }
 
 .mobile-menu-container {
@@ -126,17 +136,29 @@ img {
   display: flex;
   flex-direction: column;
   gap: 40px;
+  margin-bottom: 284px;
 }
 
 .mobile-menu-link {
   color: var(--color-primary);
   text-decoration: none;
-  padding-top: 24px;
-  padding-bottom: 24px;
   display: flex;
+  align-items: center;
 }
+
 .mobile-contacts-list {
-  
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
+  font-size: 20px;
+  line-height: 24px;
+  letter-spacing: 0.02em;
+  color: #434455;
+}
+
+.mobile-contacts {
+  display: flex;
+  text-decoration: none;
 }
 
 /* navigation */
