--- a/css/styles.css
+++ b/css/styles.css
@@ -275,6 +275,11 @@ img {
 
 /* section-hero */
 
+.section-hero > .container {
+  padding: 0;
+  width: 100%;
+}
+
 .section-hero {
   background-image: linear-gradient(
       rgba(46, 47, 66, 0.7),
@@ -285,21 +290,21 @@ img {
   background-position: center;
   background-size: cover;
   background-color: var(--color-primary);
-  padding-top: 192px;
-  padding-bottom: 192px;
-  width: 1440px;
+  padding-top: 112px;
+  padding-bottom: 112px;
+  display: flex;
 }
 
 .section-hero-title {
-  font-weight: 500;
-  font-size: 56px;
-  line-height: 1.07;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.11;
   color: var(--color-third);
   letter-spacing: 0.02em;
   margin: 0 auto;
-  margin-bottom: 48px;
+  margin-bottom: 72px;
   text-align: center;
-  width: 492px;
+  width: 320px;
 }
 
 /* Button */
@@ -311,7 +316,7 @@ img {
   letter-spacing: 0.04em;
   cursor: pointer;
   width: 170px;
-  height: 51px;
+  height: 56px;
   border-radius: 4px;
   color: var(--color-third);
   background-color: var(--color-action);
@@ -1092,6 +1097,27 @@ img {
     padding: 0;
   }
 
+  /* Section HERO */
+
+  .section-hero > .container {
+    padding-left: 15px;
+    padding-right: 15px;
+  }
+
+  .section-hero {
+    padding-top: 112px;
+    padding-bottom: 112px;
+    display: flex;
+  }
+
+  .section-hero-title {
+    font-weight: 700;
+    font-size: 56px;
+    line-height: 60px;
+    width: 530px;
+    margin-bottom: 40px;
+  }
+
   /* Section ADVANTAGES */
 
   .advantages-list {
@@ -1262,6 +1288,62 @@ img {
   .link-contacts:focus .link-contacts {
     fill: var(--color-action);
     color: var(--color-action);
+  }
+
+  /* Section HERO */
+
+  .section-hero {
+    background-image: linear-gradient(
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)
+      ),
+      url(../images/hero-bg.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    background-color: var(--color-primary);
+    padding-top: 192px;
+    padding-bottom: 192px;
+    width: 1440px;
+  }
+
+  .section-hero-title {
+    font-weight: 700;
+    font-size: 56px;
+    line-height: 1.07;
+    color: var(--color-third);
+    letter-spacing: 0.02em;
+    margin: 0 auto;
+    margin-bottom: 48px;
+    text-align: center;
+    width: 520px;
+  }
+
+  /* Button */
+
+  .button-section-hero {
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 1.18;
+    letter-spacing: 0.04em;
+    cursor: pointer;
+    width: 170px;
+    height: 51px;
+    border-radius: 4px;
+    color: var(--color-third);
+    background-color: var(--color-action);
+    display: block;
+    margin: 0 auto;
+    border: none;
+    transition: color, background-color,
+      box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+
+  .button-section-hero:hover,
+  .button-section-hero:focus {
+    color: var(--color-third);
+    background-color: var(--color-button-action);
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   }
 
   /* Section ADVANTAGES */
