--- a/css/styles.css
+++ b/css/styles.css
@@ -662,6 +662,8 @@ img {
 
 .footer-container-all {
   display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .footer-container {
@@ -674,9 +676,11 @@ img {
   font-size: 18px;
   line-height: 1.16;
   letter-spacing: 0.03em;
+  display: flex;
   text-transform: uppercase;
   text-decoration: none;
   color: var(--color-background-brand);
+  justify-content: center;
 }
 
 .web-footer-logo {
@@ -694,11 +698,12 @@ img {
   letter-spacing: 0.02em;
   color: var(--color-background-button);
   margin-top: 16px;
+  margin-bottom: 72px;
 }
 
 .social-media {
   width: 208px;
-  margin-left: 120px;
+  margin-bottom: 72px;
 }
 
 .social-media-title {
@@ -708,6 +713,7 @@ img {
   letter-spacing: 0.02em;
   color: var(--color-third);
   margin-bottom: 16px;
+  text-align: center;
 }
 
 .social-media-list {
@@ -736,7 +742,8 @@ img {
 }
 
 .footer-form-subscribe {
-  margin-left: auto;
+  display: flex;
+  flex-direction: column;
 }
 
 .footer-form-text {
@@ -745,15 +752,18 @@ img {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: var(--color-third);
+  text-align: center;
   margin-bottom: 16px;
 }
 
 .footer-form-container {
   display: flex;
+  flex-direction: column;
+  width: 100%;
 }
 
 .footer-form-input {
-  width: 264px;
+  width: 396px;
   height: 40px;
   border: 1px solid rgba(255, 255, 255, 0.3);
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
@@ -790,7 +800,8 @@ img {
   background-color: var(--color-action);
   display: flex;
   padding: 8px 24px;
-  margin-left: 24px;
+  margin: 0 auto;
+  margin-top: 16px;
   border: none;
   align-items: center;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -1037,6 +1048,16 @@ img {
 @media screen and (min-width: 480px) {
   .container {
     width: 428px;
+  }
+
+  .footer-form-input {
+    width: 396px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .footer-form-input {
+    width: 296px;
   }
 }
 
