--- a/css/styles.css
+++ b/css/styles.css
@@ -1175,6 +1175,157 @@ img {
   .customers-list-item {
     width: calc((100% - 24px * 3) / 3);
   }
+
+  /* Section FOOTER */
+
+  .footer {
+    background-color: var(--color-background-section);
+    padding: 100px 0 100px 0;
+  }
+
+  .footer-container-all {
+    display: flex;
+  }
+
+  .footer-container {
+    width: 264px;
+  }
+
+  .footer-logo {
+    font-family: "Raleway";
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 1.16;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    text-decoration: none;
+    color: var(--color-background-brand);
+  }
+
+  .web-footer-logo {
+    font-family: "Raleway";
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 1.16;
+    letter-spacing: 0.03em;
+    color: var(--color-action);
+  }
+
+  .footer-text {
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: var(--color-background-button);
+    margin-top: 16px;
+  }
+
+  .social-media {
+    width: 208px;
+    margin-left: 120px;
+  }
+
+  .social-media-title {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: var(--color-third);
+    margin-bottom: 16px;
+  }
+
+  .social-media-list {
+    display: flex;
+    gap: 16px;
+    justify-content: center;
+  }
+  .media-list {
+    width: 40px;
+    height: 40px;
+  }
+  .media-link {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    background-color: rgb(255, 255, 255, 0.1);
+    border-radius: 50%;
+    justify-content: center;
+    align-items: center;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+
+  .media-link:hover,
+  .media-link:focus {
+    background-color: #31d0aa;
+  }
+
+  .footer-form-subscribe {
+  }
+
+  .footer-form-text {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: var(--color-third);
+    margin-bottom: 16px;
+  }
+
+  .footer-form-container {
+    display: flex;
+  }
+
+  .footer-form-input {
+    width: 264px;
+    height: 40px;
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+    border-radius: 4px;
+    padding: 8px 16px;
+    background-color: var(--color-background-section);
+    color: var(--color-third);
+  }
+
+  .footer-form-input:focus {
+    outline: none;
+  }
+
+  .footer-form-input::placeholder {
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 2;
+    letter-spacing: 0.04em;
+    color: rgba(255, 255, 255, 0.6);
+  }
+
+  .footer-form-btn {
+    font-weight: 700;
+    position: relative;
+    font-size: 16px;
+    text-align: start;
+    line-height: 1.18;
+    letter-spacing: 0.04em;
+    cursor: pointer;
+    width: 165px;
+    height: 40px;
+    border-radius: 4px;
+    color: var(--color-third);
+    background-color: var(--color-action);
+    display: flex;
+    padding: 8px 24px;
+    margin-left: 24px;
+    border: none;
+    align-items: center;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+
+  .footer-form-btn:hover,
+  .footer-form-btn:focus {
+    background-color: var(--color-button-action);
+  }
+
+  .footer-form-icon {
+    margin-left: 16px;
+  }
 }
 
 /* DESCTOP */
@@ -1522,5 +1673,157 @@ img {
   .customers-list-item {
     width: calc((100% - 120px) / 6);
     height: 88px;
+  }
+
+  /* footer */
+
+  .footer {
+    background-color: var(--color-background-section);
+    padding: 100px 0 100px 0;
+  }
+
+  .footer-container-all {
+    display: flex;
+  }
+
+  .footer-container {
+    width: 264px;
+  }
+
+  .footer-logo {
+    font-family: "Raleway";
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 1.16;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    text-decoration: none;
+    color: var(--color-background-brand);
+  }
+
+  .web-footer-logo {
+    font-family: "Raleway";
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 1.16;
+    letter-spacing: 0.03em;
+    color: var(--color-action);
+  }
+
+  .footer-text {
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: var(--color-background-button);
+    margin-top: 16px;
+  }
+
+  .social-media {
+    width: 208px;
+    margin-left: 120px;
+  }
+
+  .social-media-title {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: var(--color-third);
+    margin-bottom: 16px;
+  }
+
+  .social-media-list {
+    display: flex;
+    gap: 16px;
+    justify-content: center;
+  }
+  .media-list {
+    width: 40px;
+    height: 40px;
+  }
+  .media-link {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    background-color: rgb(255, 255, 255, 0.1);
+    border-radius: 50%;
+    justify-content: center;
+    align-items: center;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+
+  .media-link:hover,
+  .media-link:focus {
+    background-color: #31d0aa;
+  }
+
+  .footer-form-subscribe {
+    margin-left: auto;
+  }
+
+  .footer-form-text {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: var(--color-third);
+    margin-bottom: 16px;
+  }
+
+  .footer-form-container {
+    display: flex;
+  }
+
+  .footer-form-input {
+    width: 264px;
+    height: 40px;
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+    border-radius: 4px;
+    padding: 8px 16px;
+    background-color: var(--color-background-section);
+    color: var(--color-third);
+  }
+
+  .footer-form-input:focus {
+    outline: none;
+  }
+
+  .footer-form-input::placeholder {
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 2;
+    letter-spacing: 0.04em;
+    color: rgba(255, 255, 255, 0.6);
+  }
+
+  .footer-form-btn {
+    font-weight: 700;
+    position: relative;
+    font-size: 16px;
+    text-align: start;
+    line-height: 1.18;
+    letter-spacing: 0.04em;
+    cursor: pointer;
+    width: 165px;
+    height: 40px;
+    border-radius: 4px;
+    color: var(--color-third);
+    background-color: var(--color-action);
+    display: flex;
+    padding: 8px 24px;
+    margin-left: 24px;
+    border: none;
+    align-items: center;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+
+  .footer-form-btn:hover,
+  .footer-form-btn:focus {
+    background-color: var(--color-button-action);
+  }
+
+  .footer-form-icon {
+    margin-left: 16px;
   }
 }
