--- a/css/styles.css
+++ b/css/styles.css
@@ -694,6 +694,11 @@ img {
   flex-direction: column;
   align-items: center;
 }
+.media-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
 
 .footer-container {
   width: 264px;
@@ -1248,17 +1253,15 @@ img {
   .media-container {
     display: flex;
     width: 100%;
+    justify-content: start;
     height: 110px;
     margin-bottom: 72px;
     gap: 24px;
   }
 
-  .footer-text {
-    font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-    color: var(--color-background-button);
-    margin-top: 16px;
+  .footer-logo {
+    display: flex;
+    justify-content: start;
   }
 
   .social-media {
@@ -1266,37 +1269,13 @@ img {
     margin: 0;
   }
 
-  
-
-  /* .social-media-list {
-    display: flex;
-    gap: 16px;
-    justify-content: center;
-  } */
-  /* .media-list {
-    width: 40px;
-    height: 40px;
-  } */
-  /* .media-link {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    background-color: rgb(255, 255, 255, 0.1);
-    border-radius: 50%;
-    justify-content: center;
-    align-items: center;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  }
-
-  .media-link:hover,
-  .media-link:focus {
-    background-color: #31d0aa;
+  .social-media-title {
+    text-align: start;
   }
 
   .footer-form-subscribe {
-  } */
-
-  .footer-form-text {
+  }
+  */ .footer-form-text {
     font-weight: 500;
     font-size: 16px;
     line-height: 1.5;
