--- a/css/styles.css
+++ b/css/styles.css
@@ -139,6 +139,10 @@ img {
   gap: 40px;
   margin-bottom: 284px;
 }
+.mobile-menu-link-studio {
+  color: var(--color-action);
+  text-decoration: none;
+}
 
 .mobile-menu-link {
   color: var(--color-primary);
@@ -166,7 +170,7 @@ img {
   font-size: 35px;
   line-height: 1.11;
   letter-spacing: 0.02em;
-  color: #434455;
+  color: var(--color-action);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -997,6 +1001,7 @@ img {
 
 .modal-form-check-desc {
   display: flex;
+  flex-wrap: wrap;
   align-items: center;
   font-weight: 400;
   font-size: 12px;
